<resources>
    <string name="app_name">ZST</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="pref_title_connection">Connection to Server</string>
    <string name="pref_title_server_ip_address">Server Address</string>
    <string name="pref_title_server_port">Server Port</string>

    <string name="pref_summary_server_ip_address">192.168.0.1</string>
    <string name="pref_summary_server_port">7777</string>

    <string name="pref_title_snmp_connection">SNMP Configuration</string>
    <string name="pref_title_snmp_machine_ip_address">SNMP Address</string>
    <string name="pref_title_snmp_port">SNMP Port</string>
    <string name="pref_title_read_community">Read Community</string>
    <string name="pref_title_snmp_version">SNMP Version</string>

    <string name="pref_summary_snmp_connection">Connection</string>
    <string name="pref_summary_snmp_machine_ip_address">127.0.0.1</string>
    <string name="pref_summary_snmp_port">161</string>
    <string name="pref_summary_read_community">community</string>
    <string name="pref_summary_snmp_version">2</string>
    <string name="title_activity_oid">oid</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_server_connection">Connection to Server</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="pref_font_size">
        <item>12 dp</item>
        <item>14 dp</item>
        <item>16 dp</item>
        <item>18 dp</item>
        <item>20 dp</item>
        <item>22 dp</item>
        <item>24 dp</item>
        <item>26 dp</item>
        <item>28 dp</item>
</string-array>
    <string-array name="pref_font_size_values">
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_snmp_connection">SNMP Connection</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_monitoring">Monitoring</string>
    <string name="pref_description_monitoring">Enable automatic monitoring</string>
    <string name="pref_title_font_size">Select font size in list</string>
    <string name="pref_title_child_font_size">Select font size in sublist</string>

</resources>
