<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
   <!-- <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />-->

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <!--<RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />


    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />-->
    <EditTextPreference
        android:key="pref_key_snmp_connection_address"
        android:summary="@string/pref_summary_snmp_machine_ip_address"
        android:title="@string/pref_title_snmp_machine_ip_address"
        android:defaultValue="127.0.0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditTextPreference
        android:key="pref_key_snmp_connection_port"
        android:summary="@string/pref_summary_snmp_port"
        android:title="@string/pref_title_snmp_port"
        android:defaultValue="161"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditTextPreference
        android:key="pref_key_connection_community"
        android:summary="@string/pref_summary_read_community"
        android:title="@string/pref_title_read_community"
        android:defaultValue="snmpClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditTextPreference
        android:key="pref_key_snmp_version"
        android:summary="@string/pref_summary_snmp_version"
        android:title="@string/pref_title_snmp_version"
        android:defaultValue="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</PreferenceScreen>
