<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" /> -->

    <EditTextPreference
        android:key="pref_key_connection_address"

        android:summary="@string/pref_summary_server_ip_address"
        android:title="@string/pref_title_server_ip_address"
        android:defaultValue="@string/pref_summary_server_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditTextPreference
        android:key="pref_key_connection_port"

        android:summary="@string/pref_summary_server_port"
        android:title="@string/pref_title_server_port"
        android:defaultValue="@string/pref_summary_server_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</PreferenceScreen>
